<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:id="@+id/secondActivity"
    android:orientation="vertical"
    android:configChanges="orientation|keyboardHidden"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView android:id="@+id/scan_format" android:layout_height="wrap_content" android:layout_width="wrap_content" android:layout_gravity="left" android:text="@string/formatText"/>
    <TextView android:id="@+id/scan_content" android:layout_height="wrap_content" android:layout_width="wrap_content" android:layout_gravity="left" android:text="@string/contentText"/>
    <EditText android:id="@+id/edit_name" android:layout_height="wrap_content" android:layout_width="wrap_content" android:hint="@string/name_text"/>
    <EditText android:id="@+id/edit_company" android:layout_height="wrap_content" android:layout_width="wrap_content" android:hint="@string/company_text"/>

    <LinearLayout android:id="@+id/buttons"
        android:orientation="horizontal"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:layout_height="100dp"
        android:layout_width="300dp"
        xmlns:android="http://schemas.android.com/apk/res/android">
    <Button android:id="@+id/scan_button" android:layout_height="wrap_content" android:layout_width="wrap_content" android:text="Add"/>
    <Button android:id="@+id/del_button" android:layout_height="wrap_content" android:layout_width="wrap_content" android:text="Remove" android:onClick="onClick"/>
    <Button android:id="@+id/plus_button" android:layout_height="wrap_content" android:layout_width="wrap_content" android:text="Send"/>

    </LinearLayout>
    <TextView android:id="@+id/net_status" android:layout_height="wrap_content" android:layout_width="wrap_content" android:layout_gravity="left" android:text="@string/netStat_message" android:background="#fffff99e"/>
    <ListView
        android:id="@android:id/list"
        android:descendantFocusability="blocksDescendants"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Hola" />
</LinearLayout>
